# ractIP_hom

./: Doxyfile2  Makefile  Makefile.in  Makefile~  config.h  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.scan  doxygen_log.txt  pulling.R
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doxygen/: Doxyfile
doxygen/html/: _contralign_8cpp.html  _contralign_8cpp__incl.map  _contralign_8cpp__incl.md5  _contralign_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  _contralign_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  _contralign_8cpp_source.html  _defaults_8h.html  _defaults_8h__dep__incl.map  _defaults_8h__dep__incl.md5  _defaults_8h__incl.map  _defaults_8h__incl.md5  _defaults_8h_source.html  _duplex_engine_8hpp.html  _duplex_engine_8hpp__dep__incl.map  _duplex_engine_8hpp__dep__incl.md5  _duplex_engine_8hpp__incl.map  _duplex_engine_8hpp__incl.md5  _duplex_engine_8hpp_source.html  _duplex_engine_8ipp.html  _duplex_engine_8ipp__dep__incl.map  _duplex_engine_8ipp__dep__incl.md5  _duplex_engine_8ipp__incl.map  _duplex_engine_8ipp__incl.md5  _duplex_engine_8ipp_source.html  _file_buffer_8h.html  _file_buffer_8h__dep__incl.map  _file_buffer_8h__dep__incl.md5  _file_buffer_8h__incl.map  _file_buffer_8h__incl.md5  _file_buffer_8h_source.html  _multi_sequence_8cpp.html  _multi_sequence_8cpp__incl.map  _multi_sequence_8cpp__incl.md5  _multi_sequence_8cpp_source.html  _multi_sequence_8h.html  _multi_sequence_8h__dep__incl.map  _multi_sequence_8h__dep__incl.md5  _multi_sequence_8h__incl.map  _multi_sequence_8h__incl.md5  _multi_sequence_8h_source.html  (+2127 more)
doxygen/latex/: _contralign_8cpp.tex  _contralign_8cpp__incl.md5  _contralign_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  _defaults_8h.tex  _defaults_8h__dep__incl.md5  _defaults_8h__incl.md5  _duplex_engine_8hpp.tex  _duplex_engine_8hpp__dep__incl.md5  _duplex_engine_8hpp__incl.md5  _duplex_engine_8ipp.tex  _duplex_engine_8ipp__dep__incl.md5  _duplex_engine_8ipp__incl.md5  _file_buffer_8h.tex  _file_buffer_8h__dep__incl.md5  _file_buffer_8h__incl.md5  _multi_sequence_8cpp.tex  _multi_sequence_8cpp__incl.md5  _multi_sequence_8h.tex  _multi_sequence_8h__dep__incl.md5  _multi_sequence_8h__incl.md5  _multi_sequence_8hpp.tex  _multi_sequence_8hpp__dep__incl.md5  _multi_sequence_8hpp__incl.md5  (+923 more)
src/: #gengetoptnote.txt#  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.am  Makefile.in  Makefile~  TAGS  Test  TestConfig.h  TestConfig.h.in  alignment.h  alonesample-2.clustal  alonesample.clustal  alonesample.clustal~  cmake_install.cmake  cmdline.c  cmdline.h  cmdline1.c  cmdline1.h  cyar_luxS.txt  datalog.txt  datalog.txt~  dependence_graph.txt  dependence_graph.txt~  design.txt  design.txt~  duplexHom.cpp  duplexHom.h  example1.fasta  example2.fasta  fa.cpp  gengetoptnote.txt  gengetoptnote.txt~  homfold_readlog.txt  homfold_readlog.txt~  input.ggo  input.ggo~  kaizen.txt  (+21 more)
src/.deps/: SStruct.Po  Utilities.Po  alifold.Po  aln.Po  aux.Po  averaged.Po  boltzmann_param.Po  bp.Po  centroid.Po  cmdline.Po  cmdline1.Po  contrafold.Po  contrafoldhom.Po  contrafoldm.Po  diana.Po  duplexHom.Po  fa.Po  folding_engine.Po  ip.Po  mccaskill.Po  mccaskillhom.Po  mea.Po  mixture.Po  pf_duplex.Po  pfold.Po  ps_plot.Po  ractip.Po  ractip_hom.Po  ushuffle.Po  wrapper.Po
src/centroidalifold/: CMakeLists.txt  Makefile  Makefile.am~  Makefile.in  TAGS  aln.cpp~  bp.h  centroid_alifold.cpp  centroid_homfold.cpp  cmake_install.cmake  cyktable.h  difference.txt  folding_engine.h  folding_engine.h~  readlog.txt  readlog.txt~  util.h
src/centroidalifold/contrafold/: Defaults.ipp  contrafold.h  errortest.cpp  errortest.cpp~  errortest.hpp  rand.h  wrapper.cpp
src/centroidalifold/contralign/: Makefile  Makefile.am  Makefile.in  SparseMatrix.ipp
src/centroidalifold/contralign/.deps/: MultiSequence.Po  Sequence.Po  Utilities.Po  wrapper.Po
src/centroidalifold/engine/: TAGS  alifold.cpp  aux.cpp  averaged.cpp  contrafold.cpp  contrafold.h  contrafoldhom.cpp  contrafoldm.cpp  contrafoldm.h  mccaskill.cpp  mccaskillhom.cpp  mixture.cpp  mixture.cpp~  pfold.cpp  pfold.h
src/centroidalifold/probconsRNA/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cmake_install.cmake  wrapper.cpp
src/centroidalifold/probconsRNA/.deps/: wrapper.Po
src/contrafold/: Defaults.ipp  InferenceEngine.hpp  InferenceEngine.ipp  ParameterManager.ipp
src/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
src/gtest/make/: sample1_unittest
src/probcons/: Main.cc
testdata/: RF00078.clustal  RF00078.full.fasta  RF00078_Pstali.fasta  RF00078_Pstali.fasta~  V00307.clustal  bovine.txt  bovine.xbb  chicken.txt  chicken.xbb  gca_bovin.fasta  gca_bovine.fasta  gca_bovine.fasta~  gca_bovine2.fasta~  gca_chicken.fasta  gca_chicken2.fasta  gca_mouse.fasta  gca_mouse2.fasta  gca_rat.fasta  gca_rat2.fasta  luxS.clustal  luxS.fasta  luxSRNA.fasta  luxSRNA.fasta~  mouse.txt  mouse.xbb  note.txt  note.txt~  ompA.clustal  ompA.fasta  ompA_rna.fasta  out_bp1_2.csv  out_bp2_2.csv  rat.txt  rat.xbb  res_valgrind.txt  result_micA_ompA.txt  result_sample.txt~  sample-2.clustal  sample-4.clustal  sample.clustal  (+9 more)
(+4770 files in other folders)
